fixed cutoff image problem

--- a/static/styles/screen/main.2.css
+++ b/static/styles/screen/main.2.css
@@ -429,7 +429,7 @@ a:hover, form .btn:hover { color:#8D8791;}
 }
 
 #page-content.cart{
-	overflow-y:auto;
+	overflow-y:ui-autocomplete;
 }
 #page-content.carousel{
 	overflow-x:hidden;
@@ -478,7 +478,9 @@ a:hover, form .btn:hover { color:#8D8791;}
 			position:absolute;
 		}
 
-
+		.bigplus{
+			font-size:1.2em;
+		}
 		.tab-begone{
 			display:none;
 			top:-1px;
